# ticker-fullstack

./: .env.template  .gitignore  README.md  db.sqlite3  dev.py  main.py  ping_render.py  pyproject.toml  render_build.py  render_start.py
apps/accounts/: forms.py  views.py
apps/manager/: urls.py  views.py
apps/portfolio/: models.py  views.py
apps/wallet/: urls.py  views.py
config/: settings.py  urls.py  views.py
seed/: seed.py
static/css/: custom.css  header.css  registration.css
static/js/: portfolio.js
templates/: 404.html  base.html  settings.html
templates/accounts/: account_deleted.html
templates/manager/: create.html  edit.html  manager.html
templates/partials/: header.html
templates/portfolio/: portfolio.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  register.html
templates/wallet/: create.html  edit.html  wallet.html
