[project]
name = "ticker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "gunicorn>=23.0.0",
    "requests>=2.32.5",
    "uvicorn",
    "whitenoise>=6.11.0",
]

[tool.setuptools]
packages = ["apps", "config"]
